OSSM/1_32/must-gather.local.3859268501405119422/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4d59bccd930a20d3ef173ce3b67824c13e4a552054077134140a87f49a661feb/namespaces/istio-system/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:45:54Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      app.kubernetes.io/version: 2.5.1-1-2
      maistra-version: 2.4.7
      maistra.io/owner: istio-system
      maistra.io/owner-name: basic
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:maistra-version: {}
            f:maistra.io/owner: {}
            f:maistra.io/owner-name: {}
            f:release: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:45:54Z"
    name: istio-expose-route-basic
    namespace: istio-system
    ownerReferences:
    - apiVersion: maistra.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: ServiceMeshControlPlane
      name: basic
      uid: b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c
    resourceVersion: "35322"
    uid: 53f33642-24b8-4143-a415-fe6f2e3d6ed4
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
    podSelector:
      matchLabels:
        maistra.io/expose-route: "true"
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/internal":"true","maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio-ingressgateway","app.kubernetes.io/component":"istio-ingress","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-ingress","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","istio":"ingressgateway","knativ [...]
      maistra.io/internal: "true"
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:45:55Z"
    generation: 1
    labels:
      app: istio-ingressgateway
      app.kubernetes.io/component: istio-ingress
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: istio-ingress
      app.kubernetes.io/part-of: istio
      app.kubernetes.io/version: 2.5.1-1-2
      istio: ingressgateway
      knative: ingressgateway
      maistra-version: 2.4.7
      maistra.io/owner: istio-system
      maistra.io/owner-name: basic
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/internal: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:istio: {}
            f:knative: {}
            f:maistra-version: {}
            f:maistra.io/owner: {}
            f:maistra.io/owner-name: {}
            f:release: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:45:55Z"
    name: istio-ingressgateway
    namespace: istio-system
    ownerReferences:
    - apiVersion: maistra.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: ServiceMeshControlPlane
      name: basic
      uid: b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c
    resourceVersion: "35336"
    uid: dfefc55f-2e75-46a1-a79e-9720e0ee6d5b
  spec:
    ingress:
    - {}
    podSelector:
      matchLabels:
        app: istio-ingressgateway
        istio: ingressgateway
        knative: ingressgateway
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/internal":"true","maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istiod","app.kubernetes.io/component":"istio-discovery","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-discovery","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","istio":"pilot","istio.io/rev":"basic","ma [...]
      maistra.io/internal: "true"
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:45:40Z"
    generation: 1
    labels:
      app: istiod
      app.kubernetes.io/component: istio-discovery
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: istio-discovery
      app.kubernetes.io/part-of: istio
      app.kubernetes.io/version: 2.5.1-1-2
      istio: pilot
      istio.io/rev: basic
      maistra-version: 2.4.7
      maistra.io/owner: istio-system
      maistra.io/owner-name: basic
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/internal: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:istio: {}
            f:istio.io/rev: {}
            f:maistra-version: {}
            f:maistra.io/owner: {}
            f:maistra.io/owner-name: {}
            f:release: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:45:40Z"
    name: istio-istiod-basic
    namespace: istio-system
    ownerReferences:
    - apiVersion: maistra.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: ServiceMeshControlPlane
      name: basic
      uid: b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c
    resourceVersion: "34999"
    uid: a116011b-485e-44d2-ad2f-6dd46c66317b
  spec:
    ingress:
    - {}
    podSelector:
      matchLabels:
        app: istiod
        istio.io/rev: basic
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:45:54Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      app.kubernetes.io/version: 2.5.1-1-2
      maistra-version: 2.4.7
      maistra.io/owner: istio-system
      maistra.io/owner-name: basic
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:maistra-version: {}
            f:maistra.io/owner: {}
            f:maistra.io/owner-name: {}
            f:release: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c"}: {}
        f:spec:
          f:ingress: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:45:54Z"
    name: istio-mesh-basic
    namespace: istio-system
    ownerReferences:
    - apiVersion: maistra.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: ServiceMeshControlPlane
      name: basic
      uid: b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c
    resourceVersion: "35317"
    uid: 9c1fc68a-3dfa-414d-8a42-bb5860fa4e21
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            maistra.io/member-of: istio-system
    podSelector: {}
    policyTypes:
    - Ingress
kind: NetworkPolicyList
metadata:
  resourceVersion: "54668"
